# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.56 2004/05/27 16:41:36 zhen Exp $

  27 May 2004; John Davis <zhen@gentoo.org>
  livecd/cdtar/silo-1.3.1-cdtar.tar.bz2,
  livecd/cdtar/silo-1.3.2-sparc64-cdtar.tar.bz2,
  livecd/cdtar/silo-1.4.4-sparc32-cdtar.tar.bz2,
  livecd/runscript/default-runscript.sh:
  added updated silos and fixed motd bug

  22 May 2004; John Davis <zhen@gentoo.org> REMARKS, catalyst:
  rolling out version 1.0.8

  22 May 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/livecdfs-update.sh,
  modules/livecd_stage2_target.py:
  added key livecd/bootsplash

  21 May 2004; John Davis <zhen@gentoo.org> arch/sparc.py, arch/sparc64.py,
  livecd/runscript/sparc-archscript.sh,
  livecd/runscript/sparc64-archscript.sh:
  sparc fixup patches from gustavoz at g.org

  20 May 2004; John Davis <zhen@gentoo.org> modules/livecd_stage2_target.py:
  added support for blacklisting modules via hotplug in livecd-stage2. spec key
  is livecd/modblacklist

  19 May 2004; John Davis <zhen@gentoo.org>
  livecd/runscript/default-runscript.sh, modules/livecd_stage2_target.py,
  livecd/runscript/x86-archscript.sh:
  added support for livecd/overlay, changed vga=0x317 to vga=791
  in the x86 archscript as it is a more standard setting and should
  work on more hardware

  17 May 2004; John Davis <zhen@gentoo.org>
  livecd/runscript/default-runscript.sh, livecd/runscript/x86-archscript.sh,
  livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/livecdfs-update.sh,
  modules/livecd_stage2_target.py:
  fixes for the genkernel arg handling - we can now do it on a per-kernel basis.
  we also now have basic motd copying support for more branded livecds

  16 May 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/kmerge.sh, modules/livecd_stage2_target.py: